--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -17,7 +17,8 @@
     "@tailwindcss/vite": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "gsap": "^3.13.0",
+    "embla-carousel-react": "^8.6.0",
+    "gsap": "^3.14.2",
     "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
